objects/S1_Response__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>User Story 5306779: External Id to map records from Hub and divisions</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Push Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S1_Request__c</fullName>
        <label>S1 Request</label>
        <referenceTo>S1_Request__c</referenceTo>
        <relationshipName>S1_Response</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                    <default>true</default>
                    <label>Outgoing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>S1 Response</label>
    <nameField>
        <displayFormat>Res-{0000}</displayFormat>
        <label>S1 Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S1 Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Create_on_Closed</fullName>
        <active>true</active>
        <description>US 5306779 : Restrict user from creating a Response when the request is closed</description>
        <errorConditionFormula>AND(ISPICKVAL(S1_Request__r.Status__c, &apos;Closed&apos;) , ISPICKVAL(Type__c,&apos;Outgoing&apos;),   ISNEW() )</errorConditionFormula>
        <errorMessage>A new Response cannot be created for closed request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Updates</fullName>
        <active>true</active>
        <description>The response can only be updated when the status is &apos;New&apos;</description>
        <errorConditionFormula>ISCHANGED( Description__c ) &amp;&amp; !ISPICKVAL(Status__c, &apos;New&apos;)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>The response can only be updated when the status is &apos;New&apos;</errorMessage>
    </validationRules>
</CustomObject>